--- a/package.json
+++ b/package.json
@@ -1,31 +1,21 @@
 {
-  "name": "smart-contract-versioning-api",
+  "name": "contract-versioning-api",
   "version": "1.0.0",
-  "description": "Semantic versioning API for smart contract deployments",
+  "description": "API for semantic versioning of smart contract deployments",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "smart-contracts",
-    "versioning",
-    "blockchain",
-    "api",
-    "mongodb"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
+    "axios": "^1.11.0",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.10"
   }
 }
